  or wxStringBufferLength instead.

Major new features in this release
----------------------------------


2.9.0
-----

All:

- Added wxJoin() and wxSplit() functions (Francesco Montorsi)
- Added wxMutex::LockTimeout() (Aleksandr Napylov)
- Added wxMemoryInputStream(wxInputStream&) ctor (Stas Sergeev)
- Implemented wxMemoryInputStream::CanRead()

All (GUI):

- Added wxDC::StretchBlit() for wxMac and wxMSW (Vince Harron)
- Added support for labels for toolbar controls (Vince Harron)
- Added wxEventBlocker class (Francesco Montorsi).
- Added wxFile/DirPickerCtrl::Get/SetFile/DirName() (Francesco Montorsi).
- Added wxSizerFlags::Top() and Bottom().
- Slovak translation added.
- Fixed tab-related drawing and hit-testing bugs in wxRichTextCtrl.
- Implemented background colour in wxRichTextCtrl.
- Fixed crashes in helpview when opening a file.
- Set locale to the default in all ports, not just wxGTK
- Added wxJoystick::GetButtonState/Position() (Frank C Szczerba)
- Added wxGridUpdateLocker helper class (Evgeniy Tarassov)
- Support wxGRID_AUTOSIZE in wxGrid::SetRow/ColLabelSize() (Evgeniy Tarassov)
- Added wxWindow::NavigateIn() in addition to existing Navigate()
- Add support for <data> tags to wxrc

wxGTK:

- Support for markup and ellipsization in wxStaticText (Francesco Montorsi)
- Native implementation for wxHyperlinkCtrl (Francesco Montorsi)
- Native keyboard navigation implementation
- Don't overwrite primary selection with clipboard and vice versa
- Implemented support for underlined fonts in wxStaticText.
- wxTopLevelWindow::SetSizeHints size increments now work.
- wxTopLevelWindow::GetSize() returns the size including the WM decorations.
- wxTopLevelWindow::GetClientSize() returns 0x0 when the window is minimized.
- Added support for colour cursors (Pascal Monasse).
- Setting foreground colour of single line wxTextCtrl now works
- Pass current control text to EVT_TEXT handler for wxSpinCtrl (John Ratliff)
- Added gtk.tlw.can-set-transparency system option
